@@ -70,14 +70,13 @@ import org.slf4j.LoggerFactory;
 import org.apache.hbase.thirdparty.com.google.common.collect.Lists;
 
 /**
- * Class that handles the source of a replication stream.
- * Currently does not handle more than 1 slave cluster.
- * For each slave cluster it selects a random number of peers
- * using a replication ratio. For example, if replication ration = 0.1
- * and slave cluster has 100 region servers, 10 will be selected.
+ * Class that handles the source of a replication stream. Currently does not handle more than 1
+ * slave cluster. For each slave cluster it selects a random number of peers using a replication
+ * ratio. For example, if replication ration = 0.1 and slave cluster has 100 region servers, 10 will
+ * be selected.
  * <p>
- * A stream is considered down when we cannot contact a region server on the
- * peer cluster for more than 55 seconds by default.
+ * A stream is considered down when we cannot contact a region server on the peer cluster for more
+ * than 55 seconds by default.
  * </p>
  */
 @InterfaceAudience.Private
@@ -116,12 +115,12 @@ public class ReplicationSource implements ReplicationSourceInterface {
   private volatile ReplicationEndpoint replicationEndpoint;
 
   private boolean abortOnError;
-  //This is needed for the startup loop to identify when there's already
-  //an initialization happening (but not finished yet),
-  //so that it doesn't try submit another initialize thread.
-  //NOTE: this should only be set to false at the end of initialize method, prior to return.
+  // This is needed for the startup loop to identify when there's already
+  // an initialization happening (but not finished yet),
+  // so that it doesn't try submit another initialize thread.
+  // NOTE: this should only be set to false at the end of initialize method, prior to return.
   private AtomicBoolean startupOngoing = new AtomicBoolean(false);
-  //Flag that signalizes uncaught error happening while starting up the source
+  // Flag that signalizes uncaught error happening while starting up the source
   // and a retry should be attempted
   private AtomicBoolean retryStartup = new AtomicBoolean(false);
 
@@ -136,7 +135,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
   private long currentBandwidth;
   private WALFileLengthProvider walFileLengthProvider;
   protected final ConcurrentHashMap<String, ReplicationSourceShipper> workerThreads =
-      new ConcurrentHashMap<>();
+    new ConcurrentHashMap<>();
 
   private AtomicLong totalBufferUsed;
 
@@ -148,17 +147,17 @@ public class ReplicationSource implements ReplicationSourceInterface {
   private Thread initThread;
 
   /**
-   * WALs to replicate.
-   * Predicate that returns 'true' for WALs to replicate and false for WALs to skip.
+   * WALs to replicate. Predicate that returns 'true' for WALs to replicate and false for WALs to
+   * skip.
    */
   private final Predicate<Path> filterInWALs;
 
   /**
-   * Base WALEntry filters for this class. Unmodifiable. Set on construction.
-   * Filters *out* edits we do not want replicated, passed on to replication endpoints.
-   * This is the basic set. Down in #initializeWALEntryFilter this set is added to the end of
-   * the WALEntry filter chain. These are put after those that we pick up from the configured
-   * endpoints and other machinations to create the final {@link #walEntryFilter}.
+   * Base WALEntry filters for this class. Unmodifiable. Set on construction. Filters *out* edits we
+   * do not want replicated, passed on to replication endpoints. This is the basic set. Down in
+   * #initializeWALEntryFilter this set is added to the end of the WALEntry filter chain. These are
+   * put after those that we pick up from the configured endpoints and other machinations to create
+   * the final {@link #walEntryFilter}.
    * @see WALEntryFilter
    */
   private final List<WALEntryFilter> baseFilterOutWALEntries;
@@ -170,10 +169,11 @@ public class ReplicationSource implements ReplicationSourceInterface {
   }
 
   /**
-   * @param replicateWAL Pass a filter to run against WAL Path; filter *in* WALs to Replicate;
-   *   i.e. return 'true' if you want to replicate the content of the WAL.
+   * @param replicateWAL            Pass a filter to run against WAL Path; filter *in* WALs to
+   *                                Replicate; i.e. return 'true' if you want to replicate the
+   *                                content of the WAL.
    * @param baseFilterOutWALEntries Base set of filters you want applied always; filters *out*
-   *   WALEntries so they never make it out of this ReplicationSource.
+   *                                WALEntries so they never make it out of this ReplicationSource.
    */
   ReplicationSource(Predicate<Path> replicateWAL, List<WALEntryFilter> baseFilterOutWALEntries) {
     this.filterInWALs = replicateWAL;
@@ -182,19 +182,19 @@ public class ReplicationSource implements ReplicationSourceInterface {
 
   /**
    * Instantiation method used by region servers
-   * @param conf configuration to use
-   * @param fs file system to use
-   * @param manager replication manager to ping to
-   * @param server the server for this region server
-   * @param queueId the id of our replication queue
+   * @param conf      configuration to use
+   * @param fs        file system to use
+   * @param manager   replication manager to ping to
+   * @param server    the server for this region server
+   * @param queueId   the id of our replication queue
    * @param clusterId unique UUID for the cluster
-   * @param metrics metrics for replication source
+   * @param metrics   metrics for replication source
    */
   @Override
   public void init(Configuration conf, FileSystem fs, ReplicationSourceManager manager,
-      ReplicationQueueStorage queueStorage, ReplicationPeer replicationPeer, Server server,
-      String queueId, UUID clusterId, WALFileLengthProvider walFileLengthProvider,
-      MetricsSource metrics) throws IOException {
+    ReplicationQueueStorage queueStorage, ReplicationPeer replicationPeer, Server server,
+    String queueId, UUID clusterId, WALFileLengthProvider walFileLengthProvider,
+    MetricsSource metrics) throws IOException {
     this.server = server;
     this.conf = HBaseConfiguration.create(conf);
     this.waitOnEndpointSeconds =
@@ -223,8 +223,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
     this.totalBufferUsed = manager.getTotalBufferUsed();
     this.walFileLengthProvider = walFileLengthProvider;
 
-    this.abortOnError = this.conf.getBoolean("replication.source.regionserver.abort",
-      true);
+    this.abortOnError = this.conf.getBoolean("replication.source.regionserver.abort", true);
 
     LOG.info("queueId={}, ReplicationSource: {}, currentBandwidth={}", queueId,
       replicationPeer.getId(), this.currentBandwidth);
@@ -268,7 +267,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
 
   @Override
   public void addHFileRefs(TableName tableName, byte[] family, List<Pair<Path, Path>> pairs)
-      throws ReplicationException {
+    throws ReplicationException {
     String peerId = replicationPeer.getId();
     if (replicationPeer.getPeerConfig().needToReplicate(tableName, family)) {
       this.queueStorage.addHFileRefs(peerId, pairs);
@@ -280,7 +279,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
   }
 
   private ReplicationEndpoint createReplicationEndpoint()
-      throws InstantiationException, IllegalAccessException, ClassNotFoundException, IOException {
+    throws InstantiationException, IllegalAccessException, ClassNotFoundException, IOException {
     RegionServerCoprocessorHost rsServerHost = null;
     if (server instanceof HRegionServer) {
       rsServerHost = ((HRegionServer) server).getRegionServerCoprocessorHost();
@@ -294,9 +293,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
     } else {
       try {
         replicationEndpoint = Class.forName(replicationEndpointImpl)
-            .asSubclass(ReplicationEndpoint.class)
-            .getDeclaredConstructor()
-            .newInstance();
+          .asSubclass(ReplicationEndpoint.class).getDeclaredConstructor().newInstance();
       } catch (NoSuchMethodException | InvocationTargetException e) {
         throw new IllegalArgumentException(e);
       }
@@ -313,7 +310,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
   }
 
   private void initAndStartReplicationEndpoint(ReplicationEndpoint replicationEndpoint)
-      throws IOException, TimeoutException {
+    throws IOException, TimeoutException {
     TableDescriptors tableDescriptors = null;
     if (server instanceof HRegionServer) {
       tableDescriptors = ((HRegionServer) server).getTableDescriptors();
@@ -345,13 +342,13 @@ public class ReplicationSource implements ReplicationSourceInterface {
         LOG.debug("{} starting shipping worker for walGroupId={}", logPeerId(), walGroupId);
         ReplicationSourceShipper worker = createNewShipper(walGroupId);
         ReplicationSourceWALReader walReader =
-            createNewWALReader(walGroupId, worker.getStartPosition());
+          createNewWALReader(walGroupId, worker.getStartPosition());
         Threads.setDaemonThreadRunning(
-            walReader, Thread.currentThread().getName()
-            + ".replicationSource.wal-reader." + walGroupId + "," + queueId,
-          (t,e) -> this.uncaughtException(t, e, this.manager, this.getPeerId()));
+          walReader, Thread.currentThread().getName() + ".replicationSource.wal-reader."
+            + walGroupId + "," + queueId,
+          (t, e) -> this.uncaughtException(t, e, this.manager, this.getPeerId()));
         worker.setWALReader(walReader);
-        worker.startup((t,e) -> this.uncaughtException(t, e, this.manager, this.getPeerId()));
+        worker.startup((t, e) -> this.uncaughtException(t, e, this.manager, this.getPeerId()));
         return worker;
       }
     });
@@ -380,14 +377,10 @@ public class ReplicationSource implements ReplicationSourceInterface {
         LOG.warn("{} No replication ongoing, waiting for new log", logPeerId());
       }
       ReplicationStatus.ReplicationStatusBuilder statusBuilder = ReplicationStatus.newBuilder();
-      statusBuilder.withPeerId(this.getPeerId())
-          .withQueueSize(queueSize)
-          .withWalGroup(walGroupId)
-          .withCurrentPath(currentPath)
-          .withCurrentPosition(shipper.getCurrentPosition())
-          .withFileSize(fileSize)
-          .withAgeOfLastShippedOp(ageOfLastShippedOp)
-          .withReplicationDelay(replicationDelay);
+      statusBuilder.withPeerId(this.getPeerId()).withQueueSize(queueSize).withWalGroup(walGroupId)
+        .withCurrentPath(currentPath).withCurrentPosition(shipper.getCurrentPosition())
+        .withFileSize(fileSize).withAgeOfLastShippedOp(ageOfLastShippedOp)
+        .withReplicationDelay(replicationDelay);
       sourceReplicationStatus.put(this.getPeerId() + "=>" + walGroupId, statusBuilder.build());
     }
     return sourceReplicationStatus;
@@ -415,9 +408,9 @@ public class ReplicationSource implements ReplicationSourceInterface {
   private ReplicationSourceWALReader createNewWALReader(String walGroupId, long startPosition) {
     return replicationPeer.getPeerConfig().isSerial()
       ? new SerialReplicationSourceWALReader(fs, conf, logQueue, startPosition, walEntryFilter,
-      this, walGroupId)
-      : new ReplicationSourceWALReader(fs, conf, logQueue, startPosition, walEntryFilter,
-      this, walGroupId);
+        this, walGroupId)
+      : new ReplicationSourceWALReader(fs, conf, logQueue, startPosition, walEntryFilter, this,
+        walGroupId);
   }
 
   /**
@@ -428,15 +421,14 @@ public class ReplicationSource implements ReplicationSourceInterface {
     return walEntryFilter;
   }
 
-  protected final void uncaughtException(Thread t, Throwable e,
-      ReplicationSourceManager manager, String peerId) {
+  protected final void uncaughtException(Thread t, Throwable e, ReplicationSourceManager manager,
+    String peerId) {
     OOMEChecker.exitIfOOME(e, getClass().getSimpleName());
-    LOG.error("Unexpected exception in {} currentPath={}",
-      t.getName(), getCurrentPath(), e);
-    if(abortOnError){
+    LOG.error("Unexpected exception in {} currentPath={}", t.getName(), getCurrentPath(), e);
+    if (abortOnError) {
       server.abort("Unexpected exception in " + t.getName(), e);
     }
-    if(manager != null){
+    if (manager != null) {
       while (true) {
         try {
           LOG.info("Refreshing replication sources now due to previous error on thread: {}",
@@ -445,8 +437,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
           break;
         } catch (IOException e1) {
           LOG.error("Replication sources refresh failed.", e1);
-          sleepForRetries("Sleeping before try refreshing sources again",
-            maxRetriesMultiplier);
+          sleepForRetries("Sleeping before try refreshing sources again", maxRetriesMultiplier);
         }
       }
     }
@@ -496,19 +487,19 @@ public class ReplicationSource implements ReplicationSourceInterface {
 
   /**
    * Do the sleeping logic
-   * @param msg Why we sleep
+   * @param msg             Why we sleep
    * @param sleepMultiplier by how many times the default sleeping time is augmented
    * @return True if <code>sleepMultiplier</code> is &lt; <code>maxRetriesMultiplier</code>
    */
   protected boolean sleepForRetries(String msg, int sleepMultiplier) {
     try {
       if (LOG.isTraceEnabled()) {
-        LOG.trace("{} {}, sleeping {} times {}",
-          logPeerId(), msg, sleepForRetries, sleepMultiplier);
+        LOG.trace("{} {}, sleeping {} times {}", logPeerId(), msg, sleepForRetries,
+          sleepMultiplier);
       }
       Thread.sleep(this.sleepForRetries * sleepMultiplier);
     } catch (InterruptedException e) {
-      if(LOG.isDebugEnabled()) {
+      if (LOG.isDebugEnabled()) {
         LOG.debug("{} Interrupted while sleeping between retries", logPeerId());
       }
       Thread.currentThread().interrupt();
@@ -566,7 +557,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
     for (;;) {
       peerClusterId = replicationEndpoint.getPeerUUID();
       if (this.isSourceActive() && peerClusterId == null) {
-        if(LOG.isDebugEnabled()) {
+        if (LOG.isDebugEnabled()) {
           LOG.debug("{} Could not connect to Peer ZK. Sleeping for {} millis", logPeerId(),
             (this.sleepForRetries * sleepMultiplier));
         }
@@ -588,12 +579,11 @@ public class ReplicationSource implements ReplicationSourceInterface {
       retryStartup.set(!this.abortOnError);
       throw new IllegalStateException("Source should be active.");
     }
-    LOG.info("{} queueId={} (queues={}) is replicating from cluster={} to cluster={}",
-      logPeerId(), this.replicationQueueInfo.getQueueId(), logQueue.getNumQueues(), clusterId,
-      peerClusterId);
+    LOG.info("{} queueId={} (queues={}) is replicating from cluster={} to cluster={}", logPeerId(),
+      this.replicationQueueInfo.getQueueId(), logQueue.getNumQueues(), clusterId, peerClusterId);
     initializeWALEntryFilter(peerClusterId);
     // Start workers
-    for (String walGroupId: logQueue.getQueues().keySet()) {
+    for (String walGroupId : logQueue.getQueues().keySet()) {
       tryStartNewShipper(walGroupId);
     }
     setSourceStartupStatus(false);
@@ -617,22 +607,21 @@ public class ReplicationSource implements ReplicationSourceInterface {
     setSourceStartupStatus(true);
     initThread = new Thread(this::initialize);
     Threads.setDaemonThreadRunning(initThread,
-      Thread.currentThread().getName() + ".replicationSource," + this.queueId,
-      (t,e) -> {
-        //if first initialization attempt failed, and abortOnError is false, we will
-        //keep looping in this thread until initialize eventually succeeds,
-        //while the server main startup one can go on with its work.
+      Thread.currentThread().getName() + ".replicationSource," + this.queueId, (t, e) -> {
+        // if first initialization attempt failed, and abortOnError is false, we will
+        // keep looping in this thread until initialize eventually succeeds,
+        // while the server main startup one can go on with its work.
         sourceRunning = false;
         uncaughtException(t, e, null, null);
         retryStartup.set(!this.abortOnError);
         do {
-          if(retryStartup.get()) {
+          if (retryStartup.get()) {
             this.sourceRunning = true;
             setSourceStartupStatus(true);
             retryStartup.set(false);
             try {
               initialize();
-            } catch(Throwable error){
+            } catch (Throwable error) {
               setSourceStartupStatus(false);
               uncaughtException(t, error, null, null);
               retryStartup.set(!this.abortOnError);
@@ -658,13 +647,12 @@ public class ReplicationSource implements ReplicationSourceInterface {
     terminate(reason, cause, clearMetrics, true);
   }
 
-  public void terminate(String reason, Exception cause, boolean clearMetrics,
-      boolean join) {
+  public void terminate(String reason, Exception cause, boolean clearMetrics, boolean join) {
     if (cause == null) {
       LOG.info("{} Closing source {} because: {}", logPeerId(), this.queueId, reason);
     } else {
-      LOG.error(String.format("%s Closing source %s because an error occurred: %s",
-        logPeerId(), this.queueId, reason), cause);
+      LOG.error(String.format("%s Closing source %s because an error occurred: %s", logPeerId(),
+        this.queueId, reason), cause);
     }
     this.sourceRunning = false;
     if (initThread != null && Thread.currentThread() != initThread) {
@@ -678,7 +666,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
 
     for (ReplicationSourceShipper worker : workers) {
       worker.stopWorker();
-      if(worker.entryReader != null) {
+      if (worker.entryReader != null) {
         worker.entryReader.setReaderRunning(false);
       }
     }
@@ -706,8 +694,8 @@ public class ReplicationSource implements ReplicationSourceInterface {
         }
       }
       if (!server.isAborted() && !server.isStopped()) {
-        //If server is running and worker is already stopped but there was still entries batched,
-        //we need to clear buffer used for non processed entries
+        // If server is running and worker is already stopped but there was still entries batched,
+        // we need to clear buffer used for non processed entries
         worker.clearWALEntryBatch();
       }
     }
@@ -760,9 +748,9 @@ public class ReplicationSource implements ReplicationSourceInterface {
     return replicationQueueInfo;
   }
 
-  public boolean isWorkerRunning(){
-    for(ReplicationSourceShipper worker : this.workerThreads.values()){
-      if(worker.isActive()){
+  public boolean isWorkerRunning() {
+    for (ReplicationSourceShipper worker : this.workerThreads.values()) {
+      if (worker.isActive()) {
         return worker.isActive();
       }
     }
@@ -773,7 +761,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
   public String getStats() {
     StringBuilder sb = new StringBuilder();
     sb.append("Total replicated edits: ").append(totalReplicatedEdits)
-        .append(", current progress: \n");
+      .append(", current progress: \n");
     for (Map.Entry<String, ReplicationSourceShipper> entry : workerThreads.entrySet()) {
       String walGroupId = entry.getKey();
       ReplicationSourceShipper worker = entry.getValue();
@@ -782,7 +770,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
       sb.append("walGroup [").append(walGroupId).append("]: ");
       if (currentPath != null) {
         sb.append("currently replicating from: ").append(currentPath).append(" at position: ")
-            .append(position).append("\n");
+          .append(position).append("\n");
       } else {
         sb.append("no replication ongoing, waiting for new log");
       }
@@ -796,7 +784,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
   }
 
   @Override
-  //offsets totalBufferUsed by deducting shipped batchSize.
+  // offsets totalBufferUsed by deducting shipped batchSize.
   public void postShipEdits(List<Entry> entries, int batchSize) {
     if (throttler.isEnabled()) {
       throttler.addPushSize(batchSize);
@@ -835,7 +823,7 @@ public class ReplicationSource implements ReplicationSourceInterface {
     workerThreads.remove(worker.walGroupId, worker);
   }
 
-  public String logPeerId(){
+  public String logPeerId() {
     return "peerId=" + this.getPeerId() + ",";
   }
 }
